src/css/style.scss
$md : 20em;
$lg : 40em;
$xl : 50em;
$xxl : 80em;

$blue :#4ECBF6 ;
$darkblue: #077EFA;
$navy: #090D6A;
$green : #01FE93;
$pink : #EE0790;
$bg : #100929;

@import "../../node_modules/@glidejs/glide/src/assets/sass/glide.core";

html {
  padding:0;
  margin:0;
  scroll-behavior: smooth;
  body {
    margin:0;
    padding:0;
    line-height:1.6;
    min-height:100vh;
    background: radial-gradient(circle 80vw at calc(50% + 20vw) 20vh,  rgba(188,40,217,1) 1%, rgba(42,48,149,1) 35%, rgba(16,9,41,1) 80%);
    background-color: $bg;
    background-repeat: no-repeat;
    background-position: 0 0;
    font-family: museo-sans, sans-serif;
    font-weight:300;
    color:#fff;
    position:relative;
    display: grid;
    grid-template-rows: 1fr auto;
    > * {
      min-width: 0;
    }
    @media (max-width:$lg) {
      font-size:.9em;
    }
  }
}

h1,h2,h3,h4,h5,h6 {
  font-weight:300;
  img {
    display:inline;
    vertical-align: middle;
  }
}
h3 {
  font-weight: 400;
}

h2 {
  font-family: gill-sans-nova-inline, sans-serif;
  color:$blue;
  font-size:calc(1em + 1.5vw);
  span {
    color:$green;
  }
}

h4 {
  font-weight:300;
  margin: 2em 0;
  font-size:1.2em;
}

a {
  color:$blue;
  text-decoration:none;
}

a:not(.btn-glow):hover, a:not(.btn-glow):visited {
  color:$pink;
}

section {
  box-sizing:border-box;
}

.row {
  max-width:1200px;
  margin:0 auto;
  padding:1em;
  &.narrow {
    max-width:1000px;
  }  
  &.ultranarrow {
    max-width:700px;
  }

}

.align-center {
  text-align:center;
}

.col-2,.col-3,.col-4 {
  display:grid;
  padding:calc(2em + 2vw);
  gap:calc(2em + 2vw);
  .col-header {
    grid-column: 1/-1;
  }
}

.col-reverse {
  direction: rtl;
  > * {
    direction: ltr;
  }
}

.col-align-center {
  align-items: center;
}

@media (min-width:$lg) {
  .col-2, .col-4 {
    grid-template-columns:1fr 1fr;
  }
  .col-3 {
    grid-template-columns:1fr 1fr 1fr;
  }
}

@media (min-width:$xxl) {
  .col-4 {
    grid-template-columns:1fr 1fr 1fr 1fr;
  }
}

.glow-box {
  border:solid 4px $blue;
  background: $bg;
  border-radius: .5em;
  padding:calc(2em + 2vw);
  gap:calc(2em + 2svw);
  box-sizing: border-box;
  position:relative;
  margin:2em auto;
  h2 {
    margin:0;
    position:absolute;
    top:-1.8em;
    left:1em;
    font-sizE:1.5rem;
    &:before {
      position:absolute;
      height:2em;
      width:100%;
      content: "";
      background:$bg;
      left:0;
      top:calc(1.8em - 4px);
      z-index:0;
    }
    img {
      height:3em;
      width:auto;
      position:relative;
      z-index:1;
      max-width: 100%;
    }
  }
}

.onload {
  opacity:0;
  transition:all .5s;
  transform:translateY(-1em);
  transition-delay: 1s;
  &.loaded {
    opacity:1;
    transform:none;
  }
}

.btn {
  cursor:pointer;
}
.btn-glow {
  --glow-color:#{$blue};
  text-decoration:none;
  display:inline-block;
  padding:.5em 2em;
  background:none;
  cursor:pointer;
  color:var(--glow-color,$blue);
  border-radius:.5em;
  border:solid .2em var(--glow-color,$blue);
  text-shadow:0 0 5px var(--glow-color,$blue), 0 0 10px var(--glow-color,$blue);
  box-shadow: 0 0 10px var(--glow-color,$blue) , 0 0 10px var(--glow-color,$blue) inset;
  transition:all .5s;
  font-weight:200;
  &:hover {
    --glow-color:#{$pink};
  }
  &.btn-glow__green {
    --glow-color:#{$green};
    &:hover {
      color:#fff;
      text-shadow:0 0 5px $pink,0 0 5px rgb(253, 103, 228);
    }
  }
  &.btn-glow__pink {
    --glow-color:#{$pink};
  }
  &.btn-glow__big {
    font-size:1.2em;
  }
}

#oferta {
  h2 {
    text-align:center;
  }
}
.offer-tiems {
  display:grid;
  gap:1em;
  padding:0;
  .offer-item {
    border: solid 3px $darkblue;
    padding: 2em 2.2em;
    border-radius:.5em;
    display:grid;
    grid-template-rows: 1fr auto;
    text-align:center;
    padding-top:3em;
    position:relative;
    &:before {
      position:absolute;
      z-index:0;
      content:"";
      width:100%;
      height:100%;
      transition:all 1s;
      background: radial-gradient(circle at 80% 50%, rgba(188,40,217,1) 6%, rgba(42,48,149,0.6253851882549895) 48%, rgba(16,9,41,0) 100%);
      background-size:100% 200%;
      opacity:0;
    }
    > div {
      position: relative;
      z-index:2;
    }
    &:hover {
      &:before {
        opacity:.3;
      }
    }
    h3 {
      color:$darkblue;
    }
    p {
      text-align:left;
    }
    .btn-glow {
      margin-top:1em;
    }
  }
}


footer {
  position:relative;
  margin-top:3em;
  border-top:solid 1px $pink;
  @media (max-width:$lg) {
    text-align:center;
  }
  .row {
    padding:2em;
  }
  &:before {
    width:100%;
    height:300%;
    left:0;
    position:absolute;
    bottom:0;
    content:"";
    background: radial-gradient(ellipse at center 100%, rgba(42,48,149,.8) 0%,  rgba(159,0,255,0.2) 30%, rgba(16,9,41,0) 70%);
    background-size:200% 80%;
    background-position:center bottom;
    background-repeat: no-repeat;
    z-index:-1;

  }
  svg {
    widtH:10em;
  }
  @media (min-width:$lg) {
    .contact {
      text-align: right;
    }
  }
  a {
    color:#fff;
  }
  p {
    margin-top:0;
  }
}

#o-brandoo {
  .col-2 {
    padding:1em 0;
  }
}

a.phone , a.mail {
  text-decoration:none;
}

.logo {
  span {
    display:none;
  }
}
/* ... */

